--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,3 +28,16 @@ categories:
     url: /categories/categories3/
   - title: "Categories4"
     url: /categories/categories4/
+
+# sidebar navigation
+docs:
+  - title: "Blog"
+    url: "/categories/blog/"
+  - title: "Categories1"
+    url: "/categories/categories1/"
+  - title: "Categories2"
+    url: "/categories/categories2/"
+  - title: "Categories3"
+    url: "/categories/categories3/"
+  - title: "Categories4"
+    url: "/categories/categories4/"
