--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ name: "Kimdaeeon-DG" # 블로그 닉네임 설정
 description: "this is my blog!" # 블로그 설명
 url: "https://Kimdaeeon-DG.github.io" # 블로그 URL
 baseurl: # the subpath of your site, e.g. "/blog"
-repository: "github-account/github-account.github.io" # GitHub Repo 이름
+repository: "Kimdaeeon-DG/Kimdaeeon-DG.github.io" # GitHub Repo 이름
 teaser: #
 
 # logo                     : # 블로그명 앞에 로고 추가하고 싶을 경우 사용
@@ -237,7 +237,7 @@ whitelist:
 #    expect broken links (especially with breadcrumbs enabled)
 #  - <base_path>/tags/my-awesome-tag/index.html ~> path: /tags/
 #  - <base_path>/categories/my-awesome-category/index.html ~> path: /categories/
-#  - <base_path>/my-awesome-category/index.html ~> path: /\
+#  - <base_path>/my-awesome-category/index.html ~> path: /
 
 # category broken link : temporary commented out
 category_archive:
